# PublicFastAPI

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml
alembic/: README  env.py
alembic/versions/: 158cc2ad80de_alterando_a_coluna_workload_de_cursos.py  1887ec25c09f_alterando_o_lazy_do_model_campi.py  1f6eb35f3969_implementando_instancia_unica_na_coluna_.py  31230604560e_att_db.py  384a305e9fda_adicionando_a_uq_curso_cidade.py  3aa6326c2c31_add_db_courses.py  4b0a67d86b1c_add_table_instituitions.py  56fd0126c685_alterando_o_lazy_do_model_cities.py  5f3b9cdb09a9_deletando_a_tabela_campi.py  6d92ae044816_alterando_a_coluna_name_de_cursos.py  6dec37e82f74_create_table_user_in_db.py  6ea60816b767_adicionando_a_uq_curso_cidade.py  9c31d9e3ba5c_creating_tables_estados_cidades_and_add_.py  9dba0c852e30_create_table_abstract.py  9e60a929fef2_alterando_o_lazy_novamente.py  9f5603a1178d_retirando_a_coluna_quantity_campus_do_.py  a50c0ea5b103_adicionando_coluna_is_admin_na_tabela_.py  a63c82e23105_adicionando_coluna_is_admin_na_tabela_.py  a7b7587bc585_adicionando_o_modelo_cursos_no_banco.py  a7d154836c1e_implementando_instancia_unica_na_coluna_.py  ae7e96f46fee_adicionando_a_uuix_curso_cidade.py  d7701456e846_alterando_o_lazy_de_todos_os_models.py  e96fbd4b28c7_adicionando_model_campi.py  ece50f7e11f1_atualizando_tabela_de_cursos.py  eee782bd5d79_alterando_propiedades_tabela_.py  f724f2e81610_adicionando_a_tabela_de_cursos_.py  f86946dd055a_alterando_as_colunas_city_id_e_id_da_.py  f8b2d5740555_creating_tables_estados_cidades_and_add_.py
src/Scripts/: add_cities_in_db.py  add_cursos.py  add_ies_db.py  add_states_in_db.py  add_universities_in_db.py  create_municipios_csv.py  extract_courses.py  extract_ies_publics.py
src/Scripts/json/: universidades.json
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: auth.py  cities.py  courses.py  ies.py  states.py
src/app/models/: __init__.py  baseModel.py  citiesModel.py  courseLocationsModel.py  coursesModel.py  iesModel.py  statesModel.py  userModel.py
src/app/schemas/: ResponseSchema.py  citySchema.py  courseSchema.py  instituitionSchema.py  stateSchema.py  userSchema.py
src/app/utils/: add_courses.py  delete_duplicateds.py  exceptions.py  querys_db.py
src/publicapi/: main.py
src/publicapi/api/v1/: api.py
src/publicapi/api/v1/endpoints/: auth.py  campi.py  cities.py  courses.py  ies.py  states.py
src/publicapi/core/: auth.py  configs.py  db.py  deps.py
src/publicapi/models/: __init__.py  baseModel.py  campiModel.py  citiesModel.py  courseLocationsModel.py  coursesModel.py  iesModel.py  statesModel.py  userModel.py
src/publicapi/schemas/: ResponseSchema.py  campiSchemas.py  citySchema.py  cityeSchema.py  courseSchema.py  instituitionSchema.py  stateSchema.py  userSchema.py
src/publicapi/utils/: add_courses.py  exceptions.py  querys_db.py
