[project]
name = "publicapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Limaxz", email = "jpbarroslima12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "alembic (==1.16.5)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "asyncpg (==0.30.0)",
    "bcrypt (==4.3.0)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.8.3)",
    "charset-normalizer (==3.4.3)",
    "colorama (==0.4.6)",
    "crashtest (== 0.3.0)",
    "distlib (==0.4.0)",
    "dulwich (==0.24.1)",
    "ecdsa (==0.19.1)",
    "fastapi (==0.117.1)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.19.1)",
    "findpython (==0.7.0)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.3.0)",
    "keyring (==25.6.0)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "more-itertools (==10.8.0)",
    "msgpack (==1.1.1)",
    "packaging (==25.0)",
    "passlib (==1.7.4)",
    "pbs-installer (==2025.9.18)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.4.0)",
    "psycopg2-binary (==2.9.10)",
    "pyasn1 (==0.6.1)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "pydantic-settings (==2.10.1)",
    "pydantic-core (==2.33.2)",
    "pyproject-hooks (==1.2.0)",
    "python-dotenv (==1.1.1)",
    "python-jose (==3.5.0)",
    "pywin32-ctypes (==0.2.3)",
    "rapidfuzz (==3.14.1)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "rsa (==4.9.1)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.43)",
    "starlette (==0.48.0)",
    "tomlkit (==0.13.3)",
    "trove-classifiers (==2025.9.11.17)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.5.0)",
    "virtualenv (==20.34.0)",
    "zstandard (==0.25.0)",
    "emec-api (>=0.1.10,<0.2.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "publicapi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
