[tool.poetry]
name = "publicapi"
version = "0.1.0"
description = ""
authors = ["Limaxz <jpbarroslima12@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}] # <-- Esta linha está CORRETA para src/app

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
alembic = "==1.16.5"
fastapi = ">=0.118.3,<0.119.0"
uvicorn = ">=0.37.0,<0.38.0"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
pydantic = {extras = ["email"], version = ">=2.12.0,<3.0.0"} # <-- Correção para dependências com extras
"python-jose" = ">=3.5.0,<4.0.0"
"python-multipart" = ">=0.0.20,<0.0.21"
pytz = ">=2025.2,<2026.0"
requests = ">=2.32.5,<3.0.0"
sqlalchemy = ">=2.0.44,<3.0.0"
"pydantic-settings" = ">=2.11.0,<3.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"